--- a/form.html
+++ b/form.html
@@ -16,13 +16,8 @@
     <h2>Patrol Visit</h2>
 
     <!-- Location -->
-    <label>Location</label>
-    <select id="location">
-      <option value="">Select Location</option>
-      <option>Gate A</option>
-      <option>Gate B</option>
-      <option>Warehouse</option>
-    </select>
+    <select id="location"></select>
+
 
     <!-- Checklist -->
     <label>Checklist</label>
