--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
 <script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwHVwHgL8Aed_KbSMsY1inr692SXI6bcjYzt_5803et6I7n9_PXMW3bB97NERSYXxYSJw/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw5I4eQnpUrAmsQgqPjEfRL3IPzzu8IB2zlmuWFsBpAf0rcAG7OPa3Sx92JdLm3175NZA/exec;
 
 function login() {
   msg.innerText = "Checking...";
