--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
     <!-- Submit -->
     <button onclick="submitVisit()">Submit Visit</button>
 
-    <p id="status" style="color:green;font-weight:bold;"></p>
+    <p id="status" class="message"></p>
   </div>
 
   <script src="js/app.js"></script>
