--- a/form.html
+++ b/form.html
@@ -16,13 +16,12 @@
     <h2>Patrol Visit</h2>
 
     <!-- Location -->
-    <label>Location</label>
-    <select id="location">
-      <option value="">Select Location</option>
-      <option>Gate A</option>
-      <option>Gate B</option>
-      <option>Warehouse</option>
-    </select>
+    <select id="locationSelect" required>
+  <option value="">Select Location</option>
+  <option value="L1">L1</option>
+  <option value="L2">L2</option>
+  <option value="L3">L3</option>
+   </select>
 
     <!-- Checklist -->
     <label>Checklist</label>
