--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,10 @@
     <h2>Select form</h2>
 
 
-    <!-- AQCL -->
-    <button onclick="location.href='form.html'">Submit Visit</button>
+    <!-- menu -->
+    <button onclick="location.href='form.html'">Accomodation Quality Check</button>
+    <button onclick="location.href='form.html'">Incident Report</button>
+    <button onclick="location.href='form.html'">Fire Alarm Report</button>
     <p id="status" style="color:green;font-weight:bold;"></p>
     
   </div>
