--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="form-container">
-    <img src="logo.png" alt="Company Logo" class="logo">
+    <img src="Logo.png" alt="Company Logo" class="logo">
     <h2>Supervisor Login</h2>
 
     <input id="user" type="text" placeholder="Username">
