--- a/aqcl.html
+++ b/aqcl.html
@@ -1,1 +1,66 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Accomodation Quality Check List</title>
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <div class="form-container">
+    <h2>Accomodation Quality Check List</h2>
+
+    <!-- Location -->
+    <select id="locationSelect" required>
+  <option value="">Select Location</option>
+  <option value="L1">L1</option>
+  <option value="L2">L2</option>
+  <option value="L3">L3</option>
+   </select>
+
+    <!-- Checklist -->
+    <label>Checklist</label>
+    <div class="checklist">
+      <label>
+        <input type="checkbox" class="chk" value="Clean">
+        Clean
+      </label>
+      <label>
+        <input type="checkbox" class="chk" value="Secure">
+        Secure
+      </label>
+    </div>
+
+    <!-- Remarks -->
+    <label>Remarks</label>
+    <textarea id="remarks" placeholder="Enter remarks"></textarea>
+
+    <!-- Photos -->
+    <label>Upload Photos</label>
+    <input type="file" id="photos" accept="image/*" capture="environment" multiple>
+
+    <!-- Signature -->
+    <label>Signature</label>
+    <canvas id="sign" width="300" height="150"></canvas>
+
+    <button type="button" class="secondary" onclick="clearSign()">Clear Signature</button>
+
+    <!-- Submit -->
+    <button onclick="submitVisit()">Submit Visit</button>
+    <p id="status" style="color:green;font-weight:bold;"></p>
+
+    <button class="logout-btn" onclick="logout()">Logout</button>
+    
+  </div>
+  
+
+  
+  <script src="js/app.js"></script>
+</body>
+</html>
