--- a/menu.html
+++ b/menu.html
@@ -10,8 +10,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/auth.js"></script>
 </head>
-<body>
+<body onload="requireLogin()">
 
   <div class="form-container">
     <h2>Select Form</h2>
@@ -21,6 +22,8 @@
     <button onclick="location.href='aqcl.html'">Accomodation Quality Check</button>
     <button onclick="location.href='incident.html'">Incident Report</button>
     <button onclick="location.href='far.html'">Fire Alarm Report</button>
+
+  <br><button onclick="logout()">Logout</button>
 
     
   </div>
