--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="form-container">
     <img src="Logo.png" alt="Company Logo" class="logo">
-    <h2>Supervisor Login</h2>
+    <h2 style="text-align: center;">Supervisor Login</h2>
 
     <input id="user" type="text" placeholder="Username">
     <input id="pass" type="password" placeholder="Password">
