--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,11 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <script>
+if (localStorage.getItem("loggedIn") !== "YES") {
+  location.href = "index.html";
+}
+</script>
 <head>
   <meta charset="UTF-8">
   <title>Select Form</title>
