--- a/aqcl.html
+++ b/aqcl.html
@@ -39,27 +39,24 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <!-- Guard Position -->
 <div class="section">
-  <label>Guard in Position</label>
-  <div class="yesno">
-    <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
-    <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
-  </div>
-</div>
+    <label>Guard</label>
+    <label>in Position</label>
+       <div class="yesno">
+       <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
+       <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
+       </div>
 
-<div class="section">
   <label>Number of Guards</label>
   <input type="number" id="numGuards">
-</div>
 
-<div class="section">
-  <label>Appearance of Guard on Duty</label>
+
+  <label>Appearance of Guard on Duty (comment)</label>
   <textarea id="guardAppearance"></textarea>
-</div>
 
-<div class="section">
-  <label>Appearance of Guard Desk / Work</label>
+
+  <label>Appearance of Guard Desk / Work Area (comment)</label>
   <textarea id="deskAppearance"></textarea>
-</div>
+
 
 <div class="section">
   <label>Guard Contact Number</label>
