--- a/aqcl.html
+++ b/aqcl.html
@@ -40,26 +40,26 @@ document.addEventListener("DOMContentLoaded", function () {
 <!-- Guard Position -->
 <div class="section">
     <label>Guard</label>
-    <label>in Position</label>
+    <label>in position</label>
        <div class="yesno">
        <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
        <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
        </div>
 
-  <label>Number of Guards</label>
+  <label>Number of guards</label>
   <input type="number" id="numGuards">
 
 
-  <label>Appearance of Guard on Duty (comment)</label>
+  <label>Appearance of guard on duty (comment)</label>
   <textarea id="guardAppearance"></textarea>
 
 
-  <label>Appearance of Guard Desk / Work Area (comment)</label>
+  <label>Appearance of guard desk / work area (comment)</label>
   <textarea id="deskAppearance"></textarea>
 
 
-<div class="section">
-  <label>Guard Contact Number</label>
+
+  <label>Does the guard have all relevant contact numbers</label>
   <input id="guardContact">
 </div>
 
