--- a/menu.html
+++ b/menu.html
@@ -3,13 +3,13 @@
 <html lang="en">
   
 <head>
-  <script>
+  <!--<script>
 document.addEventListener("DOMContentLoaded", function () {
   if (localStorage.getItem("LOGGED_IN") !== "YES") {
     window.location.replace("index.html");
   }
 });
-</script>
+</script>-->
   <meta charset="UTF-8">
   <title>Select Form</title>
 
