--- a/aqcl.html
+++ b/aqcl.html
@@ -41,7 +41,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <div class="section">
     <h3>Guard</h3>
     <label>in position</label>
-       <div class="yesno">
+       <div class="radio-row">
        <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
        <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
        </div>
