--- a/aqcl.html
+++ b/aqcl.html
@@ -70,22 +70,21 @@ document.addEventListener("DOMContentLoaded", function () {
     <label class="radio-box">YES <input type="radio" name="walkPatrol" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="walkPatrol" value="NO"></label>
   </div>
-</div>
 
-<div class="section">
+
+
   <label>is the Patrol Effective?</label>
   <div class="yesno">
     <label class="radio-box">YES <input type="radio" name="patrolEffective" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="patrolEffective" value="NO"></label>
   </div>
-</div>
 
-<div class="section">
+
+
   <label>what changes have you made?</label>
   <textarea id="changesMade"></textarea>
-</div>
 
-<div class="section">
+
   <label>Is security guard visually checking 10% of QR ID Cards for personal entering commercial premises </label>
   <div class="yesno">
     <label class="radio-box">YES <input type="radio" name="qrCheck" value="YES"></label>
@@ -95,38 +94,38 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <div class="section">
   <h3>Check Supervisor Visitation Recored</h3>
-  <label>when did Supervisor Last Visit</label>
+  <label>when did guard supervisor Last Visit?</label>
   <input type="date" id="supervisorLastVisit">
-</div>
 
-<div class="section">
-  <label>Supervisor Name</label>
+
+
+  <label>Supervisor name</label>
   <input id="supervisorName">
-</div>
 
-<div class="section">
-  <label>Supervisors Visited (Last 7 Days)</label>
+
+
+  <label>How many upervisors Visited in the last 7 days?)</label>
   <input type="number" id="supervisors7Days">
-</div>
 
-<div class="section">
-  <label>Key Cabinet Locked</label>
+
+
+  <label>Is key cabinet Locked and secured?</label>
   <div class="yesno">
     <label class="radio-box">YES <input type="radio" name="keyCabinet" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="keyCabinet" value="NO"></label>
   </div>
-</div>
 
-<div class="section">
-  <label>Key Log</label>
+
+
+  <label>is key log being maintained? </label>
   <div class="yesno">
     <label class="radio-box">YES <input type="radio" name="keyLog" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="keyLog" value="NO"></label>
   </div>
-</div>
 
-<div class="section">
-  <label>List Keys Audited</label>
+
+
+  <label>List keys audited</label>
   <textarea id="keysAudited"></textarea>
 </div>
 
