--- a/aqcl.html
+++ b/aqcl.html
@@ -184,14 +184,14 @@ document.addEventListener("DOMContentLoaded", function () {
 
   
   <div class="radio-row">
-   <label>Guard Awareness &nbsp &nbsp&nbsp</label> <label class="radio-box">A <input type="radio" name="g1_awar" value="A"></label>
+   <label>Guard Awareness&nbsp&nbsp&nbsp&nbsp&nbsp</label> <label class="radio-box">A <input type="radio" name="g1_awar" value="A"></label>
     <label class="radio-box">B <input type="radio" name="g1_awar" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g1_awar" value="C"></label>
   </div>
 
   
   <div class="radio-row">
-   <label>Guard Grooming     </label> <label class="radio-box">A <input type="radio" name="g1_groom" value="A"></label>
+   <label>Guard Grooming&nbsp&nbsp&nbsp&nbsp&nbsp</label> <label class="radio-box">A <input type="radio" name="g1_groom" value="A"></label>
     <label class="radio-box">B <input type="radio" name="g1_groom" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g1_groom" value="C"></label>
   </div>
@@ -210,14 +210,14 @@ document.addEventListener("DOMContentLoaded", function () {
 
  
   <div class="radio-row">
-     <label>Guard Awareness    </label><label class="radio-box">A <input type="radio" name="g2_awar" value="A"></label>
+     <label>Guard Awareness&nbsp&nbsp&nbsp&nbsp</label><label class="radio-box">A <input type="radio" name="g2_awar" value="A"></label>
     <label class="radio-box">B <input type="radio" name="g2_awar" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g2_awar" value="C"></label>
   </div>
 
  
   <div class="radio-row">
-    <label>Guard Grooming     </label> <label class="radio-box">A <input type="radio" name="g2_groom" value="A"></label>
+    <label>Guard Grooming&nbsp&nbsp&nbsp&nbsp&nbsp</label> <label class="radio-box">A <input type="radio" name="g2_groom" value="A"></label>
     <label class="radio-box">B <input type="radio" name="g2_groom" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g2_groom" value="C"></label>
   </div>
