--- a/aqcl.html
+++ b/aqcl.html
@@ -65,17 +65,17 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <div class="section">
   <h3>Review Guards Patrol</h3>
-    <label>Did you Walk Patrol with Guard?</label>
+   
   <div class="yesno">
-    <label class="radio-box">YES <input type="radio" name="walkPatrol" value="YES"></label>
+     <label>Did you Walk Patrol with Guard?</label><label class="radio-box">YES <input type="radio" name="walkPatrol" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="walkPatrol" value="NO"></label>
   </div>
 
 
 
-  <label>is the Patrol Effective?</label>
+ 
   <div class="yesno">
-    <label class="radio-box">YES <input type="radio" name="patrolEffective" value="YES"></label>
+    <label>is the Patrol Effective?</label> <label class="radio-box">YES <input type="radio" name="patrolEffective" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="patrolEffective" value="NO"></label>
   </div>
 
@@ -109,17 +109,17 @@ document.addEventListener("DOMContentLoaded", function () {
 
 
 
-  <label>Is key cabinet Locked and secured?</label>
+ 
   <div class="yesno">
-    <label class="radio-box">YES <input type="radio" name="keyCabinet" value="YES"></label>
+    <label>Is key cabinet Locked and secured?</label> <label class="radio-box">YES <input type="radio" name="keyCabinet" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="keyCabinet" value="NO"></label>
   </div>
 
 
 
-  <label>Is key log being maintained? </label>
+  
   <div class="yesno">
-    <label class="radio-box">YES <input type="radio" name="keyLog" value="YES"></label>
+   <label>Is key log being maintained? </label> <label class="radio-box">YES <input type="radio" name="keyLog" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="keyLog" value="NO"></label>
   </div>
 
@@ -131,9 +131,9 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <div class="section">
   <h3>Building</h3>
-  <label>Cameras, working and clear?</label>
+ 
   <div class="yesno">
-    <label class="radio-box">YES <input type="radio" name="camerasWorking" value="YES"></label>
+    <label>Cameras, working and clear?</label> <label class="radio-box">YES <input type="radio" name="camerasWorking" value="YES"></label>
     <label class="radio-box">NO <input type="radio" name="camerasWorking" value="NO"></label>
   </div>
 
