--- a/aqcl.html
+++ b/aqcl.html
@@ -46,8 +46,8 @@ document.addEventListener("DOMContentLoaded", () => {
 <div class="section">
     <h3>Guard</h3>
    
-       <div class="radio-row">
-       <label>in position :</label> <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
+       <div class="yesno">
+       <label>Guard in position :</label> <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
        <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
        </div>
 
