--- a/aqcl.html
+++ b/aqcl.html
@@ -82,7 +82,8 @@ document.addEventListener("DOMContentLoaded", () => {
     <h3>Guard</h3>
    
        <div class="yesno">
-       <label>Guard in position :</label> <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
+       <label>Guard in position :</label> 
+       <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
        <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
        </div>
 
