--- a/incident.html
+++ b/incident.html
@@ -87,7 +87,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <input type="date" id="Date">
 
   <label for="time">Time</label>
-  <input type="time" id="time">
+  <input type="time" id="Time">
 
       <label>Type of Incident</label>
   <select id="Type of Incident" required>
@@ -107,10 +107,10 @@ document.addEventListener("DOMContentLoaded", () => {
     <option value="Crime">Crime</option>
     <option value="Contravention">Contravention</option>
     <option value="Others">Others</option>
-    
-    
-  </select>
-  
+    </select>
+
+     <label>Other Incident Type</label>
+     <input id="Otherincident">
  </div>
 
   
