--- a/aqcl.html
+++ b/aqcl.html
@@ -219,7 +219,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <div class="radio-row">
      <label>Guard Communication</label> 
-    <label class="radio-box">A <input type="radio" name="g1_comm" value="A"></label>
+    <label class="radio-box">A <input type="radio" name="g1_comm" value="A" required></label>
     <label class="radio-box">B <input type="radio" name="g1_comm" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g1_comm" value="C"></label>
   </div>
@@ -227,7 +227,7 @@ document.addEventListener("DOMContentLoaded", () => {
   
   <div class="radio-row">
    <label>Guard Awareness&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label> 
-    <label class="radio-box">A <input type="radio" name="g1_awar" value="A"></label>
+    <label class="radio-box">A <input type="radio" name="g1_awar" value="A" required></label>
     <label class="radio-box">B <input type="radio" name="g1_awar" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g1_awar" value="C"></label>
   </div>
@@ -235,7 +235,7 @@ document.addEventListener("DOMContentLoaded", () => {
   
   <div class="radio-row">
    <label>Guard Grooming&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label> 
-    <label class="radio-box">A <input type="radio" name="g1_groom" value="A"></label>
+    <label class="radio-box">A <input type="radio" name="g1_groom" value="A" required></label>
     <label class="radio-box">B <input type="radio" name="g1_groom" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g1_groom" value="C"></label>
   </div>
