--- a/aqcl.html
+++ b/aqcl.html
@@ -296,7 +296,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <!-- SIGNATURE -->
 <div class="section">
   <label>Signature</label>
-  <canvas id="sign"></canvas>
+  <canvas id="sign" required></canvas>
   
   <button type="button" class="secondary" onclick="clearSignature()">Clear Signature</button>
 </div>
