--- a/aqcl.html
+++ b/aqcl.html
@@ -302,7 +302,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </div>
 
 <button type="submit">Submit</button>
-<div id="status" disabled></div>
+<div id="submitBtn" disabled></div>
 
 <button type="button" onclick="location.href='menu.html'">
 ⬅ Back to Menu
