--- a/aqcl.html
+++ b/aqcl.html
@@ -247,21 +247,21 @@ document.addEventListener("DOMContentLoaded", () => {
 
  
   <div class="radio-row">
-    <label>Guard Communication</label><label class="radio-box">A <input type="radio" name="g2_comm" value="A"></label> 
+    <label>Guard Communication</label><label class="radio-box">A <input type="radio" name="g2_comm" value="A" required></label> 
     <label class="radio-box">B <input type="radio" name="g2_comm" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g2_comm" value="C"></label>
   </div>
 
  
   <div class="radio-row">
-     <label>Guard Awareness&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label><label class="radio-box">A <input type="radio" name="g2_awar" value="A"></label>
+     <label>Guard Awareness&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label><label class="radio-box">A <input type="radio" name="g2_awar" value="A" required></label>
     <label class="radio-box">B <input type="radio" name="g2_awar" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g2_awar" value="C"></label>
   </div>
 
  
   <div class="radio-row">
-    <label>Guard Grooming&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label> <label class="radio-box">A <input type="radio" name="g2_groom" value="A"></label>
+    <label>Guard Grooming&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label> <label class="radio-box">A <input type="radio" name="g2_groom" value="A" required></label>
     <label class="radio-box">B <input type="radio" name="g2_groom" value="B"></label>
     <label class="radio-box">C <input type="radio" name="g2_groom" value="C"></label>
   </div>
