--- a/aqcl.html
+++ b/aqcl.html
@@ -83,7 +83,7 @@ document.addEventListener("DOMContentLoaded", () => {
    
        <div class="yesno">
        <label>Guard in position :</label> 
-       <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
+       <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES" required></label>
        <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
        </div>
 
