--- a/aqcl.html
+++ b/aqcl.html
@@ -41,7 +41,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- Accommodation -->
 <div class="section">
-  <label><B>Accommodation Name</B></label>
+  <label><h3>Accommodation Name</h3></label>
   <select id="accName" required>
   <option value="">-- Select Accommodation --</option>  
 <option value="Muntazah Plaza 140 A& B">Muntazah Plaza 140 A& B</option>
