--- a/aqcl.html
+++ b/aqcl.html
@@ -9,9 +9,6 @@
   <title>Accommodation Quality Check List</title>
 
   <!-- Font -->
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/js/select2.min.js"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
@@ -48,7 +45,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <div class="section">
   <h3>Accommodation Name</h3>
   <select id="accName" required style="width:100%" required>
-  <option value=""></option>  
+  <<option value="">-- Select Accommodation --</option> 
 <option value="Muntazah Plaza 140 A& B">Muntazah Plaza 140 A& B</option>
 <option value="QRIOC">QRIOC</option>
 <option value="QROC - Parking">QROC - Parking</option>
@@ -83,15 +80,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <option value="Duhail 52">Duhail 52</option>
 <option value="Zenon 5">Zenon 5</option>
 </select>
-<script>
-$(document).ready(function() {
-  $('#accName').select2({
-    placeholder: "Search accommodation...",
-    allowClear: true,
-    dropdownParent: $('.form-container')
-  });
-});
-</script>
+
 </div>
 
 <!-- Guard Position -->
